--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
 			<artifactId>stanford-corenlp</artifactId>
 			<version>3.3.1</version>
 		</dependency>
+		
+		<dependency>
+        	<groupId>com.cybozu.labs</groupId>
+        	<artifactId>langdetect</artifactId>
+        	<version>1.1-20120112</version>
+        </dependency>
+        
   	</dependencies>
 	
 	<repositories>
