--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,20 @@
              		</execution>
           		</executions>
       		</plugin>
+      		<plugin>
+    			<artifactId>maven-assembly-plugin</artifactId>
+    			<configuration>
+      				<descriptorRefs>  
+        				<descriptorRef>jar-with-dependencies</descriptorRef>
+      				</descriptorRefs>
+      				<archive>
+        				<manifest>
+          					<mainClass>com.path.to.main.Class</mainClass>
+        				</manifest>
+      				</archive>
+    			</configuration>
+  			</plugin>
+  
       	</plugins>
     </build>
 </project>
