--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,17 @@
 			<artifactId>boilerpipe</artifactId>
 			<version>1.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>3.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>3.5.0</version>
+			<classifier>models</classifier>
+		</dependency>
   	</dependencies>
 	
 	<repositories>
